- fixed mobile top banner button and job overlapping issues

--- a/app/assets/stylesheets/kulkakit/style.scss
+++ b/app/assets/stylesheets/kulkakit/style.scss
@@ -1218,7 +1218,7 @@ span:hover {
     border-radius: 8px;
 
     @media (max-width: 767.98px) {
-        margin-top: 95px;
+        margin-top: 350px;
     }
 }
 
