--- a/app/assets/stylesheets/webflow/webflow-feed-banner.scss
+++ b/app/assets/stylesheets/webflow/webflow-feed-banner.scss
@@ -1,5 +1,5 @@
 .feed-banner {
-    height: 184px;
+    height: 235px;
     // background: linear-gradient(#000000, #FFFFFF 110%);
     border-radius: 8px;
 }
